<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/make_post"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/title_activity_make_apost" />
        <item
            android:id="@+id/view_posts"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/title_activity_view_posts" />
        <item
            android:id="@+id/map_posts"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/title_activity_view_map_posts" />
        <item
            android:id="@+id/logout"
            android:icon = "@drawable/ic_menu_gallery"
            android:title="@string/logout"
            />
    </group>

    <item android:title="@string/communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/send" />
        </menu>
    </item>

</menu>
