<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.jaggia.wheresmystuff9.controllers.FoundItemPost"
    tools:showIn="@layout/activity_lost_item_post">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="20dp"
            android:gravity="center_horizontal"
            android:text="@string/title_activity_create_lost_apost"
            android:textColor="@color/colorPrimary"
            android:textSize="30sp" />


        <EditText
            android:id="@+id/itemName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:hint="@string/itemname"
            android:text=""
            android:textColorHint="@color/button1"
            android:textColor="@color/button2"
            android:inputType="textVisiblePassword|textNoSuggestions"
            android:maxLines="1" />
        <EditText
            android:id="@+id/itemDescription"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:hint="@string/itemDescription"
            android:textColorHint="@color/button1"
            android:textColor="@color/button2"
            android:inputType="textMultiLine"
            android:maxLines="4" />

        <EditText
            android:id="@+id/reward"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginTop="5dp"
            android:hint="@string/reward"
            android:inputType="textVisiblePassword|textNoSuggestions"
            android:maxLines="2"
            android:textColor="@color/button2"
            android:textColorHint="@color/button1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="70dp"
                android:layout_height="40dp"
                android:layout_marginStart="55dp"
                android:textColor="@color/button1"
                android:text="@string/category"
                android:textSize="17sp"
                />
            <Spinner
                android:id= "@+id/categorySpinner"
                android:layout_width="190dp"
                android:layout_height="40dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="50dp"
                >

            </Spinner>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            android:weightSum="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="0dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:weightSum="1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/month"
                    android:layout_marginStart="25dp"
                    android:textColor="@color/button1"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:text="@string/day"
                    android:layout_marginStart="50dp"
                    android:textColor="@color/button1"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="75dp"
                    android:text="@string/year"
                    android:textColor="@color/button1"
                    android:textSize="14sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:weightSum="1">

                <Spinner
                    android:id="@+id/monthSpinner"
                    android:layout_width="90dp"
                    android:layout_height="30dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginStart="0dp"
                    android:layout_weight="0.93"></Spinner>

                <Spinner
                    android:id="@+id/daySpinner"
                    android:layout_width="90dp"
                    android:layout_height="30dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginStart="0dp"></Spinner>

                <Spinner
                    android:id="@+id/yearSpinner"
                    android:layout_width="180dp"
                    android:layout_height="30dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginStart="0dp"
                    android:layout_weight="0.16"></Spinner>
            </LinearLayout>

        </LinearLayout>
        <TextView
            android:id="@+id/show_selected_location"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="5dp"
            android:gravity="center_horizontal"
            android:textSize="20sp"
            android:text="@string/selected_location"
            android:textColor="@color/button1"/>

        <Button
            android:id="@+id/mapButton"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/button_round_two"
            android:text="@string/title_activity_maps"
            android:textColor="@color/colorAccent"
            android:textSize="20sp">

        </Button>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <Button
                android:id="@+id/cancelLost"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="120dp"
                android:layout_height="50dp"
                android:layout_marginEnd="50dp"
                android:layout_marginStart="40dp"
                android:layout_weight="1"
                android:background="@drawable/button_round_two"
                android:text="@string/cancel"
                android:textColor="@color/colorAccent"
                android:textSize="20sp">

            </Button>

            <Button
                android:id="@+id/createButton"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="120dp"
                android:layout_height="50dp"
                android:layout_marginEnd="50dp"
                android:layout_weight="1"
                android:background="@drawable/button_round_two"
                android:text="@string/create"
                android:textColor="@color/colorAccent"
                android:textSize="20sp">

            </Button>


        </LinearLayout>


    </LinearLayout>


</android.support.constraint.ConstraintLayout>
