<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_welcome"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/background"
    >
    <TextView
        android:id="@+id/welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:gravity="center_horizontal"
        android:text="@string/app_name"
        android:textColor="@color/textColor"
        android:textSize="43sp"
        android:textStyle="bold"
        android:typeface="sans"/>

    <Button
        android:id="@+id/login"
        android:layout_width="250dp"
        android:layout_height="100dp"
        android:layout_marginStart="70dp"
        android:layout_marginLeft="70dp"
        android:layout_marginTop="230dp"
        android:textColor="@color/colorAccent"
        android:textSize="50sp"
        android:textAlignment="center"
        android:background="@drawable/bg_button2"
        android:text= "@string/login" />

    <Button
        android:id="@+id/register"
        android:layout_width="250dp"
        android:layout_height="100dp"
        android:layout_marginTop="360dp"
        android:layout_marginStart="70dp"
        android:layout_marginLeft="70dp"
        android:background="@drawable/bg_button"
        android:text="@string/register"
        android:textColor="@color/colorAccent"
        android:textSize="50sp"
        android:textAlignment="center"/>




</RelativeLayout>