<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.jaggia.wheresmystuff9.controllers.LostItemPost">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/PopupOverlay" />



        <EditText
            android:id="@+id/itemName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:hint="Item Name"
            android:textColor="@color/button1"
            android:inputType="textVisiblePassword|textNoSuggestions"
            android:text="@string/itemname"
            android:maxLines="1" />
        <EditText
            android:id="@+id/itemDescription"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:hint="Item Description"
            android:textColor="@color/button1"
            android:inputType="textMultiLine"
            android:text="@string/itemDescription"
            android:maxLines="4" />
        <EditText
            android:id="@+id/reward"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:hint="Reward"
            android:textColor="@color/button1"
            android:inputType="textVisiblePassword|textNoSuggestions"
            android:text="@string/reward"
            android:maxLines="2"
            />
        <LinearLayout
            android:id="@+id/locationlayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
        <EditText
            android:id="@+id/longitude"
            android:layout_width="120dp"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="50dp"
            android:hint="Longitude"
            android:textColor="@color/button1"
            android:ems= "10"
            android:inputType="numberDecimal"
            android:text="@string/longitude"
            />
        <EditText
            android:id="@+id/latitude"
            android:layout_width="120dp"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="45dp"
            android:layout_marginRight="50dp"
            android:hint="Latitude"
            android:textColor="@color/button1"
            android:ems= "10"
            android:inputType="numberDecimal"
            android:text="@string/latitude"
            />
    </LinearLayout>
        <LinearLayout
            android:id ="@+id/categorylayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/categoryText"
                android:layout_width="70dp"
                android:layout_height="50dp"
                android:layout_marginLeft="55dp"
                android:textColor="@color/button1"
                android:text="@string/category"
                android:textSize="17sp"
                />
        <Spinner
            android:id= "@+id/categorySpinner"
            android:layout_width="190dp"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="50dp"
            >

        </Spinner>
    </LinearLayout>
        <LinearLayout
            android:id = "@+id/dateLayout"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">
        <TextView
            android:id="@+id/monthText"
            android:layout_width="40dp"
            android:layout_height="50dp"
            android:layout_marginLeft="55dp"
            android:textColor="@color/button1"
            android:text="@string/month"
            android:textSize="14sp"
            />
            <Spinner
            android:id= "@+id/monthSpinner"
            android:layout_width="30dp"
            android:layout_height="50dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            >
        </Spinner>
            <TextView
                android:id="@+id/dayText"
                android:layout_width="40dp"
                android:layout_height="50dp"
                android:layout_marginLeft="12dp"
                android:textColor="@color/button1"
                android:text="@string/day"
                android:textSize="14sp"
                />
            <Spinner
                android:id= "@+id/daySpinner"
                android:layout_width="30dp"
                android:layout_height="50dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                >
            </Spinner>
            <TextView
                android:id="@+id/yearText"
                android:layout_width="40dp"
                android:layout_height="50dp"
                android:layout_marginLeft="12dp"
                android:textColor="@color/button1"
                android:text="@string/year"
                android:textSize="14sp"
                />
        <Spinner
            android:id= "@+id/yearSpinner"
            android:layout_width="30dp"
            android:layout_height="50dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            >
        </Spinner>
    </LinearLayout>
        <LinearLayout
            android:id="@+id/buttonsLayout"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
        <Button
            android:id="@+id/createButton"
            android:layout_width="80dp"
            android:layout_height="50dp"
            android:layout_centerInParent="true"
            android:layout_marginLeft="50dp"
            android:layout_weight="1"
            android:background="@color/button1"
            android:text="Create"
            android:textColor="@color/colorAccent"
            android:textSize="20sp"></Button>

        <Button
            android:id="@+id/cancelLost"
            android:layout_width="80dp"
            android:layout_height="50dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="50dp"
            android:layout_weight="1"
            android:background="@color/button2"
            android:textSize="20sp"
            android:textColor="@color/colorAccent"
            android:text="Cancel"></Button>
        </LinearLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        app:srcCompat="@android:drawable/ic_dialog_email" />

    <include layout="@layout/content_lost_item_post" />



</android.support.design.widget.CoordinatorLayout>
