<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center_vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@mipmap/background"
    tools:context="com.example.jaggia.wheresmystuff9.controllers.RegisterScreen">

    <!-- Login progress -->

    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/userName_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="visible"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:orientation="vertical">


            <EditText
                android:id="@+id/nameRegistering"
                android:layout_width="150dp"
                android:layout_height="35dp"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:hint="Name"
                android:textColorHint="@color/button3"
                android:background="@color/colorAccent"
                android:visibility="visible"
                android:textColor="@color/button1"
                android:inputType="textVisiblePassword|textNoSuggestions"
                android:maxLines="1" />


            <EditText
                android:id="@+id/userNameRegistering"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:textColor="@color/button2"

                android:textColorHint="@color/button3"
                android:background="@color/colorAccent"
                android:hint="Username"
                android:inputType="textVisiblePassword|textNoSuggestions"
                android:maxLines="1" />

            <EditText
                android:id="@+id/emailRegistering"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:textColor="@color/button2"
                android:hint="Email"
                android:textColorHint="@color/button3"
                android:background="@color/colorAccent"
                android:inputType="textVisiblePassword|textEmailAddress"
                android:maxLines="1" />/>



            <EditText
                android:id="@+id/passwordRegister"
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:hint="Password"

                android:textColorHint="@color/button3"
                android:background="@color/colorAccent"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:imeActionId="@+id/login"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionUnspecified"
                android:textColor="@color/button1"
                android:inputType="textPassword"
                android:maxLines="1" />


            <EditText
                android:id="@+id/password"
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:hint="Retype Password"
                android:imeActionId="@+id/register"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionUnspecified"

                android:textColorHint="@color/button3"
                android:background="@color/colorAccent"
                android:textColor="@color/button2"
                android:inputType="textPassword"
                android:maxLines="1" />
            <LinearLayout
                android:id = "@+id/typeLayout"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"

                android:layout_marginTop="20dp"
                android:orientation="horizontal">
            <TextView
                android:id="@+id/typeText"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:textColor="@color/button3"

                android:text="@string/type"
                android:textAlignment="center"
                android:textSize="20sp"
                />
            <Spinner
                android:id= "@+id/typeSpinner"
                android:layout_width="130dp"
                android:layout_height="35dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="10dp"
                android:background="@color/colorAccent"
                >
            </Spinner>
            </LinearLayout>

        <LinearLayout
            android:id= "@+id/buttonRegLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginTop="30dp"
            android:orientation="horizontal">
            <Button
                android:id = "@+id/ButtonRegisterReg"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_centerInParent="true"
                android:layout_weight="1"
                android:background="@drawable/bg_button"
                android:text="@string/register"
                android:textColor="@color/colorAccent"
                android:textSize="20sp"/>
            <Button
                android:id = "@+id/ButtonCancelReg"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_centerInParent="true"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:background="@drawable/bg_button"
                android:text="@string/cancel"
                android:textColor="@color/colorAccent"
                android:textSize="20sp"/>
        </LinearLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>